# Interrogation-harness

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
docs/: PREMISE_CONTROL_PROTOCOL_V2.md  V2_IMPLEMENTATION_SPEC.md
docs/goals/: v2_pass_c_answer_assimilation.md  v2_pass_d_blind_spot_closure_gate.md
scripts/: build_sample_session.py  build_v2_sample_session.py
sessions/sample_session/: events.jsonl  final_artifact.md  ledger.json  source.md
sessions/v2_sample_session/: events.jsonl  final_artifact.md  ledger.json  source.md
src/interrogation_harness/: __init__.py  __main__.py  artifact.py  audit.py  canonical.py  cli.py  event_log.py  events.py  ids.py  interrogation.py  operations.py  projection.py  provenance.py  records.py  session_store.py  state_machine.py  validation.py
src/interrogation_harness/model/: __init__.py  adapter.py  config.py  gemini.py  jobs.py  mock.py  schemas.py
tests/: test_acceptance_section20.py  test_gemini_adapter.py  test_imports.py  test_stage2_proof.py  test_stage3_proof.py  test_stage4_model.py  test_stage5_validation.py  test_stage6_engines_cli.py  test_v2_pass_a1_evidence.py  test_v2_pass_a_intake.py  test_v2_pass_b_ranking.py  test_v2_pass_c_answer_assimilation.py  test_v2_pass_d_blind_spot_closure_gate.py  test_v2_pass_e_final_artifact_acceptance.py  test_v2_stage1.py  test_v2_stage2.py
